--- a/grid-demo/css/grid.css
+++ b/grid-demo/css/grid.css
@@ -1,16 +1,42 @@
+html {
+    height: 100%;
+}
+
 body {
     font-family: sans-serif;
     font-size: 14px;
     margin: 0;
     padding: 0;
+    height: 100%;
 }
 
 .grid-container {
-    padding: 10px;
+    padding: 0 10px;
+    height: 100%;
 }
 
 .main-grid {
-    margin-bottom: 30px;
+    height: 70%;
+}
+
+.k-multicheck-wrap .k-label {
+    max-width: 200px;
+    display: inline-block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 11px;
+    vertical-align: middle;
+}
+
+.k-multicheck-wrap .k-item {
+    line-height: initial;
+    vertical-align: middle;
+    margin-bottom: 7px;
+}
+
+.k-multicheck-wrap input {
+    vertical-align: middle;
+    margin: -1px 3px 0 0;
 }
 
 .grid-title {
@@ -26,9 +52,10 @@ body {
 }
 
 .save-box {
-    padding: 20px;
+    text-align: right;
+    padding: 10px;
     background: #eee;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
 }
 
 .save-box__info {
